Login sign jumps fixed
Login sign jumps fixed

--- a/src/sass/partials/_login.scss
+++ b/src/sass/partials/_login.scss
@@ -63,8 +63,8 @@ h2{
     transition: .5s;
 }
 input:focus ~ label,
-input:valid ~ label{
-top: -5px;
+input:focus ~ label, input:not(:placeholder-shown) ~ label {
+    top: -5px;
 }
 
 .inputbox input {
